fix: some artist names being unreadable in light theme

--- a/fm/bleh.css
+++ b/fm/bleh.css
@@ -145,7 +145,7 @@ a,
 .async-content-error-message,
 .avatar-status-dot, .label, .shout-user-avatar:before, .user-status-None,
 .masthead-nav-control,
-.header-new-actions :is(a, button), .header-new-inner, [itemprop="byArtist"] a,
+.header-new-actions :is(a, button), .header-new-inner, span[itemprop="byArtist"] a,
 .user-dashboard-layout .masthead a,
 .bleh--redacted-message,
 .header-metadata-display, .chartlist-count-bar, .chartlist-count-bar-value
@@ -189,7 +189,7 @@ a,
     [data-bleh--theme="light"] &:not(
         .user-dashboard-layout, .header-metadata-tnew-item,
         .header-new-actions :is(a, button),
-        .header-new-inner, [itemprop="byArtist"] a, .user-dashboard-layout .masthead a) {
+        .header-new-inner, span[itemprop="byArtist"] a, .user-dashboard-layout .masthead a) {
         --c1: var(--hue), calc(var(--sat) * 6%), 0%;
         --c2: var(--hue), calc(var(--sat) * 4%), 4%;
         --c3: var(--hue), calc(var(--sat) * 10%), 30%;
